--- a/front/index.html
+++ b/front/index.html
@@ -19,23 +19,23 @@
             <div class="header-options">
                 <nav class="nav-container">
                     <li class="nav-item"><img src="assest/icon.png" width="15" height="15" alt="icon" /><a
-                            href="#">RPG</a></li>
+                            href="/category.html?category=rpg">RPG</a></li>
                     <li class="nav-item"><img src="assest/icon.png" width="15" height="15" alt="icon" /><a
-                            href="#">Racing</a></li>
+                            href="/category.html?category=racing">Racing</a></li>
                     <li class="nav-item"><img src="assest/icon.png" width="15" height="15" alt="icon" /><a
-                            href="#">Puzzle</a></li>
+                            href="/category.html?category=puzzle">Puzzle</a></li>
                     <li class="nav-item"><img src="assest/icon.png" width="15" height="15" alt="icon" /><a
-                            href="#">Adventure</a></li>
+                            href="/category.html?category=adventure">Adventure</a></li>
                     <li class="nav-item"><img src="assest/icon.png" width="15" height="15" alt="icon" /><a
-                            href="#">Simulation</a></li>
+                            href="/category.html?category=simulation">Simulation</a></li>
                     <li class="nav-item"><img src="assest/icon.png" width="15" height="15" alt="icon" /><a
-                            href="#">Casual</a></li>
+                            href="/category.html?category=casual">Casual</a></li>
                 </nav>
-                <div class="form-input">
+                <!-- <div class="form-input">
                     <input type="text" id="searchInput" placeholder="Searching for" />
                     <button><img src="assest/search.svg" width="15" /></button>
                     </form>
-                </div>
+                </div> -->
             </div>
     </header>
 
@@ -107,7 +107,8 @@
                     <div class="rating">
                         <a class="game-icon" href="/aqwq">🎮PLAY</a>
                     </div>
-                </div>  <div class="card">
+                </div>
+                <div class="card">
                     <div class="card-header">
                         <img src="assest/my_talking_angela_2.jpg" alt="Candy Crush">
                         <div>
@@ -127,7 +128,8 @@
                     <div class="rating">
                         <a class="game-icon" href="/aqwq">🎮PLAY</a>
                     </div>
-                </div>  <div class="card">
+                </div>
+                <div class="card">
                     <div class="card-header">
                         <img src="assest/my_talking_angela_2.jpg" alt="Candy Crush">
                         <div>
@@ -147,7 +149,8 @@
                     <div class="rating">
                         <a class="game-icon" href="/aqwq">🎮PLAY</a>
                     </div>
-                </div>  <div class="card">
+                </div>
+                <div class="card">
                     <div class="card-header">
                         <img src="assest/my_talking_angela_2.jpg" alt="Candy Crush">
                         <div>
